src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Region3__c</fullName>
        <formula>TEXT(Account_Name2__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_2__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting - Quarterly Briefing</fullName>
                </value>
                <value>
                    <fullName>Meeting - Consultation</fullName>
                </value>
                <value>
                    <fullName>Meeting - Standard</fullName>
                    <default>true</default>
                    <label>Meeting - Standard</label>
                </value>
                <value>
                    <fullName>Meeting - Demo</fullName>
                </value>
                <value>
                    <fullName>Meeting - Training</fullName>
                </value>
                <value>
                    <fullName>Meeting - Migration Meeting</fullName>
                </value>
                <value>
                    <fullName>Migration Call - no response</fullName>
                </value>
                <value>
                    <fullName>Migration Call - successful</fullName>
                </value>
                <value>
                    <fullName>Call - Client Conversation</fullName>
                </value>
                <value>
                    <fullName>Call - Client Voice Mail</fullName>
                </value>
                <value>
                    <fullName>Call - Prospecting Conversation</fullName>
                </value>
                <value>
                    <fullName>Call - Prospecting Voice Mail</fullName>
                </value>
                <value>
                    <fullName>Call - Prospecting Left Message</fullName>
                </value>
                <value>
                    <fullName>Meeting - Prospect: Formal</fullName>
                </value>
                <value>
                    <fullName>Meeting - Prospect: Casual</fullName>
                </value>
                <value>
                    <fullName>Meeting - Client: Formal</fullName>
                </value>
                <value>
                    <fullName>Meeting - Client: Casual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_type__c</fullName>
        <inlineHelpText>Choose what best describes person you spoke to</inlineHelpText>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New/Prospect Client</fullName>
                </value>
                <value>
                    <fullName>Existing client</fullName>
                </value>
                <value>
                    <fullName>Past client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_No_Time__c</fullName>
        <formula>LEFT(TEXT(ActivityDate), 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date - No Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HW_Activity_ID__c</fullName>
        <label>HW Activity ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meyers_ID__c</fullName>
        <externalId>true</externalId>
        <label>Meyers ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_to_MG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Migrated to MG Instance</description>
        <label>Migrated to MG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_SFDC_ID__c</fullName>
        <formula>WhoId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Date__c</fullName>
        <description>Stores date &amp; time of the call</description>
        <inlineHelpText>Date &amp; time of the call</inlineHelpText>
        <label>Playbooks Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Hour__c</fullName>
        <description>Stores the hour the call was placed in the prospect&apos;s time</description>
        <inlineHelpText>Stores the hour the call was placed in the prospect&apos;s time</inlineHelpText>
        <label>Playbooks Call Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Identifier__c</fullName>
        <description>Stores a unique identifier for data syncing purposes</description>
        <inlineHelpText>How InsideSales.com identifies a call was made</inlineHelpText>
        <label>Playbooks Call Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Recording__c</fullName>
        <description>A link to the call recording of that specific call</description>
        <inlineHelpText>A link to the call recording of that specific call</inlineHelpText>
        <label>Playbooks Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <description>Stores the name of the play a record is currently enrolled in</description>
        <inlineHelpText>The name of the play a record is currently enrolled in</inlineHelpText>
        <label>Playbooks Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if a rep marks a play as successful</description>
        <inlineHelpText>Check this box if a rep marks a play as successful</inlineHelpText>
        <label>Playbooks Play Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Ring_Time__c</fullName>
        <description>Stores how long the phone rang before the prospect picked up</description>
        <inlineHelpText>How long the phone rang before the prospect answered</inlineHelpText>
        <label>Playbooks Ring Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_ID__c</fullName>
        <label>Playbooks Step ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <description>Stores the step number a play was on when the activity was completed</description>
        <inlineHelpText>The step number the activity was completed on</inlineHelpText>
        <label>Playbooks Step Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked off when a user selects &quot;Success&quot; on the Play, in Playbooks.</description>
        <label>Playbooks Step Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Type__c</fullName>
        <description>Stores the type of step for the task (phone, email, other)</description>
        <inlineHelpText>The type of step for the task (phone, email, other)</inlineHelpText>
        <label>Playbooks Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Add the product discussed with contact/lead</description>
        <inlineHelpText>Choose the topics discussed during call.</inlineHelpText>
        <label>Topic Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Briefing Attendee</fullName>
                </value>
                <value>
                    <fullName>Builder Insight</fullName>
                </value>
                <value>
                    <fullName>Builder Insight w/iPad</fullName>
                </value>
                <value>
                    <fullName>Builder Lead Report</fullName>
                </value>
                <value>
                    <fullName>Client Discovery</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Segmentation</fullName>
                </value>
                <value>
                    <fullName>Custom Export/Report</fullName>
                </value>
                <value>
                    <fullName>HBO</fullName>
                </value>
                <value>
                    <fullName>Homebuilders Database</fullName>
                </value>
                <value>
                    <fullName>Housing Report</fullName>
                </value>
                <value>
                    <fullName>Insight On Ramp</fullName>
                </value>
                <value>
                    <fullName>Land Planning Optimization</fullName>
                </value>
                <value>
                    <fullName>Market Monitor</fullName>
                </value>
                <value>
                    <fullName>Market Snapshot</fullName>
                </value>
                <value>
                    <fullName>Market Study</fullName>
                </value>
                <value>
                    <fullName>Metrosearch / HA / PA</fullName>
                </value>
                <value>
                    <fullName>MortgagePro</fullName>
                </value>
                <value>
                    <fullName>Mortgage Pro</fullName>
                </value>
                <value>
                    <fullName>New Housing Profiles &amp; Statistics Report</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Permit Data</fullName>
                </value>
                <value>
                    <fullName>Published Research</fullName>
                </value>
                <value>
                    <fullName>REE / Consulting Toolkit</fullName>
                </value>
                <value>
                    <fullName>Residential Economic Report</fullName>
                </value>
                <value>
                    <fullName>RRI</fullName>
                </value>
                <value>
                    <fullName>Speaking Engagement</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Strategic Positioning Model</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_2__c</fullName>
        <label>Account Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>BPM - Great Lakes</fullName>
                </value>
                <value>
                    <fullName>BPM - National</fullName>
                </value>
                <value>
                    <fullName>BPM - Northeast</fullName>
                </value>
                <value>
                    <fullName>BPM - Southeast</fullName>
                </value>
                <value>
                    <fullName>BPM - West</fullName>
                </value>
                <value>
                    <fullName>Central/Northern FL</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Maryland/Northern VA/DC</fullName>
                </value>
                <value>
                    <fullName>Midwest - Eastern</fullName>
                </value>
                <value>
                    <fullName>Midwest - Lower</fullName>
                </value>
                <value>
                    <fullName>Midwest - Upper</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Northern CA</fullName>
                </value>
                <value>
                    <fullName>NY/NJ/PA/DE</fullName>
                </value>
                <value>
                    <fullName>Phoenix/Tucson/Prescott</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>REE - East</fullName>
                </value>
                <value>
                    <fullName>REE - West</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>SoCal 1</fullName>
                </value>
                <value>
                    <fullName>SoCal 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Owner:User.Contact.Account_Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedTo_SFDC_ID__c</fullName>
        <formula>WhatId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subtype__c</fullName>
        <description>Task Subtypes for Membership Services activities</description>
        <inlineHelpText>Enter a Task Subtype for activites related to Membership Services outreach only.</inlineHelpText>
        <label>Task Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mem Svs: Welcome Client Call</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: Welcome Client Email</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: Alternate Welcome Client Outreach</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: Onboarding Outreach</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: General Touchpoint</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: Health Check</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: Internal Communication</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: Private Training</fullName>
                </value>
                <value>
                    <fullName>Mem svs: Troubleshooting/Custom Task</fullName>
                </value>
                <value>
                    <fullName>Mem Svs: Post Mortem Interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Ownership__c</fullName>
        <formula>IF (

$User.Id =  Owner:User.Id , &apos;Me&apos;, 

IF (

Owner:User.Id != $User.Id, &apos;Assigned&apos;,

&apos;Unassigned&apos;

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <inlineHelpText>Indicates that this record was created by Cirrus Insight.</inlineHelpText>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Day_Activity_Created__c</fullName>
        <formula>CASE( MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 7), 7), 0, &quot;1 Sunday&quot;, 1, &quot;2 Monday&quot;, 2, &quot;3 Tuesday&quot;, 3,&quot;4 Wednesday&quot;, 4, &quot;5 Thursday&quot;, 5, &quot;6 Friday&quot;, 6, &quot;7 Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Activity Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Email_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not this email has been opened by a recipient.</inlineHelpText>
        <label>Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Clicked__c</fullName>
        <inlineHelpText>First time a link in this email was opened.</inlineHelpText>
        <label>First Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Opened__c</fullName>
        <inlineHelpText>The date this email was first opened by one of the recipients.</inlineHelpText>
        <label>First Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Reply__c</fullName>
        <inlineHelpText>The date this email was first replied to by one of the recipients.</inlineHelpText>
        <label>First Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Hour_Sent__c</fullName>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The hour of the day that the email was sent. (in UTC)</inlineHelpText>
        <label>Hour Sent (UTC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Hour__c</fullName>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 5/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Clicked__c</fullName>
        <inlineHelpText>Last time a link in this email was opened.</inlineHelpText>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Opened__c</fullName>
        <inlineHelpText>The date the email was most recently opened.</inlineHelpText>
        <label>Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Reply__c</fullName>
        <inlineHelpText>The date the email was most recently replied to.</inlineHelpText>
        <label>Last Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Links_Clicked__c</fullName>
        <formula>cirrusadv__Num_of_Clicks__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether or not any links in this email were opened by a recipient.</inlineHelpText>
        <label>Links Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Clicks__c</fullName>
        <inlineHelpText>Number of times links in this email were opened.</inlineHelpText>
        <label># of Clicks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Opens__c</fullName>
        <inlineHelpText>Number of times this tracked email has been opened.</inlineHelpText>
        <label># of Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Replies__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times this email has been replied to.</inlineHelpText>
        <label># of Replies</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Outcome__c</fullName>
        <inlineHelpText>The outcome selected as part of a Cirrus Insight Flight.</inlineHelpText>
        <label>Outcome</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Reply_Received__c</fullName>
        <formula>cirrusadv__Num_of_Replies__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Template_Name__c</fullName>
        <inlineHelpText>The email template used.</inlineHelpText>
        <label>Template Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Time_to_Open__c</fullName>
        <formula>(cirrusadv__First_Opened__c - CreatedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How long did this email take to open? (in minutes)</inlineHelpText>
        <label>Time to Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__isTracked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that opens of this email will be tracked and reported by Cirrus Insight.</inlineHelpText>
        <label>Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Event_Code__c</fullName>
        <inlineHelpText>Code used to identify each type of PaymentConnect event notification task</inlineHelpText>
        <label>Event Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&apos;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>This_Week_s_Tasks</fullName>
        <columns>Region__c</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week&apos;s Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>